--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CV_Alifran Akmal Rahmadyo</title>
+        <title>CV | Alifran Akmal Rahmadyo</title>
     </head>
 
     <body>
@@ -14,8 +14,9 @@
         <section>
             <h3><u>Summary</u></h3>
         <hr>
-            <p>Ea duis aute ex velit nulla consequat adipisicing magna irure aliqua ut pariatur quis amet. Non magna aliqua eiusmod nulla mollit velit laborum aute aliquip labore. Ut sit magna Lorem nulla velit Lorem non do cupidatat mollit sint Lorem cupidatat do. Quis sunt reprehenderit id ex deserunt amet elit in in sunt non ea quis. Cillum cillum sint culpa est nulla minim sit pariatur qui. Magna enim qui quis et ullamco et ad mollit incididunt sunt proident exercitation eu.
-                </p>
+            <p>Performance-driven, results-oriented, and resourceful student with years of organizational experience. Capable of
+                making crucial decisions, managing teams, and conducting team reviews, as well as having project management
+                expertise.</p>
         </section>
         
         <section>
@@ -42,15 +43,37 @@
         <section>
             <h3><u>Education</u></h3>
             <hr>
-            <table width="510">
+            <table border="1", width="510">
                 <tr>
-                    <th>Tahun</th>
-                    <th>Jenjang</th>
-                    <th>Tahun</th>
-
-
+                    <th>Education Level</th>
+                    <th>Institution Name</th>
+                    <th>Year(s)</th>
                 </tr>
+                </tr>
+                <tr>
+                    <td>SMP</td>
+                    <td>SMPIT Raudhatul Jannah</td>
+                    <td>2015 - 2018</td>
+                </tr>
+                <tr>
+                    <td>SMA</td>
+                    <td>SMAN CMBBS</td>
+                    <td>2018 - 2021</td>
+                </tr>
+                <tr>
+                    <td>Undergraduate</td>
+                    <td>Telkom University</td>
+                    <td>2021 - Present</td>
+                </tr>                   
             </table>
-    </body>
+        </section>
 
+        <section>
+            <h3><u>Additional</u></h3>
+            <hr>
+            <p><b>Language: </b>Indonesian (Native), English (Professional Proficiency), Arabic (Elementary)</p>
+            <p><b>Interpersonal Skills: </b> Leadership, Teamwork, Communication, Negotiation, Analytical Thinking</p>
+            <p><b>Certification: </b> SAP01: Fundamental by EduGate, EPrT (English Proficiency Test) - 530/677 by LAC</p>
+        </section>
+    </body>
 </html>
