--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
     </head>
 
     <body>
-        <img src="pasfoto.jpg" alt="pasfoto Dyo" width="120">
+    <div style="background-color: aquamarine;
+            width: 800px;
+            height: 110px;
+            justify-content: center;
+            text-align: center;
+            ">
+        <img src="pasfoto.jpg" alt="pasfoto Dyo" width="76" style="float: right;">
         <section>
-            <h2>Alifran Akmal Rahmadyo</h2>
-            <p>Bandung, Indonesia | +6287888580570 | alifran.akmal@gmail.com | linkedin.com/alifranakmal/</p>
+            <h2 style="font-variant: small-caps;font-style: oblique;font-family:Arial, Helvetica, sans-serif;color: darkslateblue;">Alifran Akmal Rahmadyo</h2>
+            <p style="color:darkslateblue; margin: 0;">Bandung, Indonesia | +6287888580570 | alifran.akmal@gmail.com | linkedin.com/alifranakmal/</p>
         </section>
-
+    </div>
+        <div>
         <section>
-            <h3><u>Summary</u></h3>
+            <h3 style="text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><u>Summary</u></h3>
         <hr>
             <p>Performance-driven, results-oriented, and resourceful student with years of organizational experience. Capable of
                 making crucial decisions, managing teams, and conducting team reviews, as well as having project management
                 expertise.</p>
+        <br>
         </section>
+    </div>
         
         <section>
-            <h3><u>Professional</u></h3>
+            <h3 style="text-align: center;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><u>Professional</u></h3>
             <hr>
             <h4>Marketing Crew - Bandung, Indonesia</h4>
             <p><i>Promotion Team</i></p>
@@ -37,14 +46,14 @@
                 <li>Officia Lorem exercitation nulla do dolor excepteur in eiusmod ullamco commodo.</li>
                 <li>Nostrud amet et magna anim amet culpa commodo irure pariatur in excepteur irure.</li>
             </ul>
-            <!-- <p>Do labore proident dolor elit commodo aute labore laboris. Ullamco voluptate do velit nulla non sunt velit deserunt non deserunt. Voluptate consectetur ex voluptate laborum ea proident sunt minim Lorem proident ea adipisicing. Exercitation Lorem veniam esse qui esse non quis aliquip dolor.</p> -->
+        <br>
         </section>
 
         <section>
-            <h3><u>Education</u></h3>
+            <h3 style="text-align: center;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><u>Education</u></h3>
             <hr>
-            <table border="1", width="510">
-                <tr>
+            <table border="1", width="800", style="margin: 0;text-align: center;background-color: lightblue;">
+                <tr style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
                     <th>Education Level</th>
                     <th>Institution Name</th>
                     <th>Year(s)</th>
@@ -66,10 +75,11 @@
                     <td>2021 - Present</td>
                 </tr>                   
             </table>
+        <br>
         </section>
 
         <section>
-            <h3><u>Additional</u></h3>
+            <h3 style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><u>Additional</u></h3>
             <hr>
             <p><b>Language: </b>Indonesian (Native), English (Professional Proficiency), Arabic (Elementary)</p>
             <p><b>Interpersonal Skills: </b> Leadership, Teamwork, Communication, Negotiation, Analytical Thinking</p>
